--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
-/_build
-/deps
+# The directory Mix will write compiled artifacts to.
+/_build/
+
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/deps/
+
+# Where 3rd-party dependencies like ExDoc output generated docs.
+/doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
+/.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
 *.ez
-priv/
-src/*.o
+
+# Ignore package tarball (built via "mix hex.build").
+ex_ncurses-*.tar
+
+# Ignore C code
+/priv/
+/src/*.o
